--- a/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
+++ b/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
@@ -5,7 +5,7 @@
             <table>
                 <tr>
                     <td>Device</td>
-                    <td>{{status.deviceState}}</td>
+                    <td [cdmDeviceState]="status.deviceState">{{status.deviceState}}</td>
                 </tr>
                 <tr>
                     <td>Safe door</td>
