Lesson learned: @Input() converts everything to string if you don't bind to it (thanks to @bradtaniguchi @gejustin)

--- a/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
+++ b/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
@@ -5,7 +5,7 @@
             <table>
                 <tr>
                     <td>Device</td>
-                    <td [cdmDeviceState]="status.deviceState"><cdmDeviceState value="{{status.deviceState}}"></cdmDeviceState></td>
+                    <td><cdmDeviceState [value]="status.deviceState"></cdmDeviceState></td>
                 </tr>
                 <tr>
                     <td>Safe door</td>
