Moved things from XfsModule to XfsCdmModule

--- a/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
+++ b/projects/operator/src/lib/cdm/cdm-status/cdm-status.component.html
@@ -9,11 +9,11 @@
                 </tr>
                 <tr>
                     <td>Safe door</td>
-                    <td>{{status.safeDoor}}</td>
+                    <td><cdmSafeDoor [value]="status.safeDoor"></cdmSafeDoor></td>
                 </tr>
                 <tr>
-                    <td>Dispenser</td>
-                    <td>{{status.dispenser}}</td>
+                    <td>Cash units</td>
+                    <td><cdmDispenser [value]="status.dispenser"></cdmDispenser></td>
                 </tr>
                 <tr>
                     <td>Intermediate Stacker</td>
