--- a/projects/xfs/src/lib/cdm/components/item-info-type.component.html
+++ b/projects/xfs/src/lib/cdm/components/item-info-type.component.html
@@ -1,5 +1,5 @@
 <div ngSwitch="{{value}}" [cdmItemInfoType]="value">
-    <span *ngSwitchCase="0x00000001" i18n="@@WFS_CDM_ITEM_SERIALNUMBER">SERIALNUMBER</span>
-    <span *ngSwitchCase="0x00000002" i18n="@@WFS_CDM_ITEM_SIGNATURE">SIGNATURE</span>
-    <span *ngSwitchCase="0x00000004" i18n="@@WFS_CDM_ITEM_IMAGEFILE">IMAGEFILE</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_ITEM_SERIALNUMBER">SERIALNUMBER</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_ITEM_SIGNATURE">SIGNATURE</span>
+    <span *ngSwitchCase="4" i18n="@@WFS_CDM_ITEM_IMAGEFILE">IMAGEFILE</span>
 </div>
