--- a/projects/xfs/src/lib/cdm/components/item-location.component.html
+++ b/projects/xfs/src/lib/cdm/components/item-location.component.html
@@ -1,6 +1,6 @@
 <div ngSwitch="{{value}}" [cdmItemLocation]="value">
-    <span *ngSwitchCase="0x0001" i18n="@@WFS_CDM_LOCATION_DEVICE">DEVICE</span>
-    <span *ngSwitchCase="0x0002" i18n="@@WFS_CDM_LOCATION_CASHUNIT">CASHUNIT</span>
-    <span *ngSwitchCase="0x0003" i18n="@@WFS_CDM_LOCATION_CUSTOMER">CUSTOMER</span>
-    <span *ngSwitchCase="0x0004" i18n="@@WFS_CDM_LOCATION_UNKNOWN">UNKNOWN</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_LOCATION_DEVICE">DEVICE</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_LOCATION_CASHUNIT">CASHUNIT</span>
+    <span *ngSwitchCase="3" i18n="@@WFS_CDM_LOCATION_CUSTOMER">CUSTOMER</span>
+    <span *ngSwitchCase="4" i18n="@@WFS_CDM_LOCATION_UNKNOWN">UNKNOWN</span>
 </div>
