--- a/projects/xfs/src/lib/cdm/components/move-items.component.html
+++ b/projects/xfs/src/lib/cdm/components/move-items.component.html
@@ -1,6 +1,6 @@
 <div ngSwitch="{{value}}" [cdmMoveItems]="value">
-    <span *ngSwitchCase="0x0001" i18n="@@WFS_CDM_FROMCU">FROMCU</span>
-    <span *ngSwitchCase="0x0002" i18n="@@WFS_CDM_TOCU">TOCU</span>
-    <span *ngSwitchCase="0x0004" i18n="@@WFS_CDM_TOTRANSPORT">TOTRANSPORT</span>
-    <span *ngSwitchCase="0x0008" i18n="@@WFS_CDM_TOSTACKER">TOSTACKER</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_FROMCU">FROMCU</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_TOCU">TOCU</span>
+    <span *ngSwitchCase="4" i18n="@@WFS_CDM_TOTRANSPORT">TOTRANSPORT</span>
+    <span *ngSwitchCase="8" i18n="@@WFS_CDM_TOSTACKER">TOSTACKER</span>
 </div>
