--- a/projects/xfs/src/lib/cdm/components/exchange-type.component.html
+++ b/projects/xfs/src/lib/cdm/components/exchange-type.component.html
@@ -1,4 +1,4 @@
 <div ngSwitch="{{value}}" [cdmExchangeType]="value">
-    <span *ngSwitchCase="0x0001" i18n="@@WFS_CDM_EXBYHAND">BYHAND</span>
-    <span *ngSwitchCase="0x0002" i18n="@@WFS_CDM_EXTOCASSETTES">TOCASSETTES</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_EXBYHAND">BYHAND</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_EXTOCASSETTES">TOCASSETTES</span>
 </div>
