--- a/projects/xfs/src/lib/cdm/components/on-blacklist.component.html
+++ b/projects/xfs/src/lib/cdm/components/on-blacklist.component.html
@@ -1,5 +1,5 @@
 <div ngSwitch="{{value}}" [cdmOnBlacklist]="value">
-    <span *ngSwitchCase="0x0001" i18n="@@WFS_CDM_ONBLACKLIST">ONBLACKLIST</span>
-    <span *ngSwitchCase="0x0002" i18n="@@WFS_CDM_NOTONBLACKLIST">NOTONBLACKLIST</span>
-    <span *ngSwitchCase="0x0003" i18n="@@WFS_CDM_BLACKLISTUNKNOWN">BLACKLISTUNKNOWN</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_ONBLACKLIST">ONBLACKLIST</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_NOTONBLACKLIST">NOTONBLACKLIST</span>
+    <span *ngSwitchCase="3" i18n="@@WFS_CDM_BLACKLISTUNKNOWN">BLACKLISTUNKNOWN</span>
 </div>
