--- a/projects/xfs/src/lib/cdm/components/position.component.html
+++ b/projects/xfs/src/lib/cdm/components/position.component.html
@@ -1,11 +1,11 @@
 <div ngSwitch="{{value}}">
-    <span *ngSwitchCase="0x0000" i18n="@@WFS_CDM_POSNULL">NULL</span>
-    <span *ngSwitchCase="0x0001" i18n="@@WFS_CDM_POSLEFT">LEFT</span>
-    <span *ngSwitchCase="0x0002" i18n="@@WFS_CDM_POSRIGHT">RIGHT</span>
-    <span *ngSwitchCase="0x0004" i18n="@@WFS_CDM_POSCENTER">CENTER</span>
-    <span *ngSwitchCase="0x0040" i18n="@@WFS_CDM_POSTOP">TOP</span>
-    <span *ngSwitchCase="0x0080" i18n="@@WFS_CDM_POSBOTTOM">BOTTOM</span>
-    <span *ngSwitchCase="0x0100" i18n="@@WFS_CDM_POSREJECT">REJECT</span>
-    <span *ngSwitchCase="0x0800" i18n="@@WFS_CDM_POSFRONT">FRONT</span>
-    <span *ngSwitchCase="0x1000" i18n="@@WFS_CDM_POSREAR">REAR</span>
+    <span *ngSwitchCase="0" i18n="@@WFS_CDM_POSNULL">NULL</span>
+    <span *ngSwitchCase="1" i18n="@@WFS_CDM_POSLEFT">LEFT</span>
+    <span *ngSwitchCase="2" i18n="@@WFS_CDM_POSRIGHT">RIGHT</span>
+    <span *ngSwitchCase="4" i18n="@@WFS_CDM_POSCENTER">CENTER</span>
+    <span *ngSwitchCase="64" i18n="@@WFS_CDM_POSTOP">TOP</span>
+    <span *ngSwitchCase="128" i18n="@@WFS_CDM_POSBOTTOM">BOTTOM</span>
+    <span *ngSwitchCase="256" i18n="@@WFS_CDM_POSREJECT">REJECT</span>
+    <span *ngSwitchCase="2048" i18n="@@WFS_CDM_POSFRONT">FRONT</span>
+    <span *ngSwitchCase="4096" i18n="@@WFS_CDM_POSREAR">REAR</span>
 </div>
