--- a/projects/xfs/src/lib/cdm/components/guid-lights.component.html
+++ b/projects/xfs/src/lib/cdm/components/guid-lights.component.html
@@ -1,18 +1,21 @@
-<div *ngFor="let value of values" [cdmGuidLights]="values">
-    <ng-container ngSwitch="{{value}}">
-        <span *ngSwitchCase="1" i18n="@@WFS_CDM_GUIDANCE_OFF">OFF</span>
-        <span *ngSwitchCase="4" i18n="@@WFS_CDM_GUIDANCE_SLOW_FLASH">SLOW_FLASH</span>
-        <span *ngSwitchCase="8" i18n="@@WFS_CDM_GUIDANCE_MEDIUM_FLASH">MEDIUM_FLASH</span>
-        <span *ngSwitchCase="16" i18n="@@WFS_CDM_GUIDANCE_QUICK_FLASH">QUICK_FLASH</span>
-        <span *ngSwitchCase="128" i18n="@@WFS_CDM_GUIDANCE_CONTINUOUS">CONTINUOUS</span>
-        <span *ngSwitchCase="256" i18n="@@WFS_CDM_GUIDANCE_RED">RED</span>
-        <span *ngSwitchCase="512" i18n="@@WFS_CDM_GUIDANCE_GREEN">GREEN</span>
-        <span *ngSwitchCase="1024" i18n="@@WFS_CDM_GUIDANCE_YELLOW">YELLOW</span>
-        <span *ngSwitchCase="2048" i18n="@@WFS_CDM_GUIDANCE_BLUE">BLUE</span>
-        <span *ngSwitchCase="4096" i18n="@@WFS_CDM_GUIDANCE_CYAN">CYAN</span>
-        <span *ngSwitchCase="8192" i18n="@@WFS_CDM_GUIDANCE_MAGENTA">MAGENTA</span>
-        <span *ngSwitchCase="16384" i18n="@@WFS_CDM_GUIDANCE_WHITE">WHITE</span>
-        <span *ngSwitchCase="0" i18n="@@WFS_CDM_GUIDANCE_NOT_AVAILABLE">NOT_AVAILABLE</span>
-        <span *ngSwitchCase="2097152" i18n="@@WFS_CDM_GUIDANCE_EXIT">EXIT</span>
+<div [cdmGuidLights]="values">
+    <ng-container *ngFor="let value of values; let last = last">
+        <ng-container ngSwitch="{{value}}">
+            <span *ngSwitchCase="1" i18n="@@WFS_CDM_GUIDANCE_OFF">OFF</span>
+            <span *ngSwitchCase="4" i18n="@@WFS_CDM_GUIDANCE_SLOW_FLASH">SLOW_FLASH</span>
+            <span *ngSwitchCase="8" i18n="@@WFS_CDM_GUIDANCE_MEDIUM_FLASH">MEDIUM_FLASH</span>
+            <span *ngSwitchCase="16" i18n="@@WFS_CDM_GUIDANCE_QUICK_FLASH">QUICK_FLASH</span>
+            <span *ngSwitchCase="128" i18n="@@WFS_CDM_GUIDANCE_CONTINUOUS">CONTINUOUS</span>
+            <span *ngSwitchCase="256" i18n="@@WFS_CDM_GUIDANCE_RED">RED</span>
+            <span *ngSwitchCase="512" i18n="@@WFS_CDM_GUIDANCE_GREEN">GREEN</span>
+            <span *ngSwitchCase="1024" i18n="@@WFS_CDM_GUIDANCE_YELLOW">YELLOW</span>
+            <span *ngSwitchCase="2048" i18n="@@WFS_CDM_GUIDANCE_BLUE">BLUE</span>
+            <span *ngSwitchCase="4096" i18n="@@WFS_CDM_GUIDANCE_CYAN">CYAN</span>
+            <span *ngSwitchCase="8192" i18n="@@WFS_CDM_GUIDANCE_MAGENTA">MAGENTA</span>
+            <span *ngSwitchCase="16384" i18n="@@WFS_CDM_GUIDANCE_WHITE">WHITE</span>
+            <span *ngSwitchCase="0" i18n="@@WFS_CDM_GUIDANCE_NOT_AVAILABLE">NOT_AVAILABLE</span>
+            <span *ngSwitchCase="2097152" i18n="@@WFS_CDM_GUIDANCE_EXIT">EXIT</span>
+        </ng-container>
+        <span *ngIf="!last">&nbsp;</span>
     </ng-container>
 </div>
