CDM Status: Layout, Styling

--- a/projects/xfs/src/lib/cdm/components/guid-lights.component.html
+++ b/projects/xfs/src/lib/cdm/components/guid-lights.component.html
@@ -16,6 +16,6 @@
             <span *ngSwitchCase="0" i18n="@@WFS_CDM_GUIDANCE_NOT_AVAILABLE">NOT_AVAILABLE</span>
             <span *ngSwitchCase="2097152" i18n="@@WFS_CDM_GUIDANCE_EXIT">EXIT</span>
         </ng-container>
-        <span *ngIf="!last">&nbsp;</span>
+        <br *ngIf="!last"/>
     </ng-container>
 </div>
