--- a/projects/operator/src/lib/ui/column-layout/column-layout.component.scss
+++ b/projects/operator/src/lib/ui/column-layout/column-layout.component.scss
@@ -7,7 +7,6 @@
     flex: 1 0 auto;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
 }
 
 .flex-center {
@@ -18,5 +17,5 @@
     flex: 1 0 auto;
     display: flex;
     flex-flow: column nowrap;
-    justify-content: space-around;
+    align-items: flex-end;
 }
