--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 @import '../node_modules/bootstrap/scss/bootstrap';
 
+body {
+    overflow: hidden;
+}
+
 .red {
     background-color: $danger;
 }
