--- a/projects/operator/src/lib/login/login.component.html
+++ b/projects/operator/src/lib/login/login.component.html
@@ -1,5 +1,21 @@
 <div class="box">
-    <div class="one">One</div>
-    <div class="two">Two</div>
-    <div class="three">Three</div>
+    <form>
+        <div class="form-group row">
+            <label for="user" class="col-sm-3 col-form-label">User:</label>
+            <div class="col-sm-9">
+                <input type="text" class="form-control" id="user">
+            </div>
+        </div>
+        <div class="form-group row">
+            <label for="password" class="col-sm-3 col-form-label">Password:</label>
+            <div class="col-sm-9">
+                <input type="password" class="form-control" id="password">
+            </div>
+        </div>
+        <div class="form-group row">
+            <div class="col-sm-12 text-right">
+                <button type="button" class="btn btn-primary">Login</button>
+            </div>
+        </div>
+    </form>
 </div>
