--- a/projects/operator/src/lib/login/login.component.html
+++ b/projects/operator/src/lib/login/login.component.html
@@ -14,7 +14,7 @@
         </div>
         <div class="form-group row">
             <div class="col-sm-12 text-right">
-                <button type="button" class="btn btn-primary">Login</button>
+                <button type="button" class="btn btn-primary" (click)="login()">Login</button>
             </div>
         </div>
     </form>
