--- a/projects/operator/src/lib/ui/menu-button/menu-button.component.html
+++ b/projects/operator/src/lib/ui/menu-button/menu-button.component.html
@@ -1,1 +1,1 @@
-<button class="btn btn-primary" (click)="onAction()" [ngClass]="{'d-none': !button.visible, 'disabled': button.disabled}">{{button.text}}</button>
+<button class="btn btn-primary" [disabled]="button.disabled" (click)="onAction()" [ngClass]="{'d-none': !button.visible, 'disabled': button.disabled}">{{button.text}}</button>
