--- a/projects/operator/src/lib/cdm/cdm-list/cdm-list.component.html
+++ b/projects/operator/src/lib/cdm/cdm-list/cdm-list.component.html
@@ -1,5 +1,6 @@
-<ul>
+<o2-column-layout>
+  <h1>Select dispenser</h1>
   <li *ngFor="let cashDispenser of cashDispensers">
     {{cashDispenser.name}}
   </li>
-</ul>
+</o2-column-layout>
